--- a/public/style/register.css
+++ b/public/style/register.css
@@ -54,28 +54,20 @@ fieldset{
     background-color: var(--main-title-color);
     border-radius: 25px;
 }
-.spaceAutoComplete
-{
-    width: 55%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    position: relative;
-    
-}
+
 .contAutoComplete
 {
-   z-index: 2;
- 
     background-color: #fff;
     color: #000;
     list-style: none;
     margin-top: 15px;
-
     margin-left: 25.25px;
     margin-top: -15px;
-    
-
+    width: 51%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: relative;
 }
 .contAutoComplete > li {
     cursor: pointer;
@@ -104,8 +96,8 @@ fieldset{
     padding: 15px 5px ;
        
     }
-    .space > input{
-        width: 150px;
+    .space > input , .contAutoComplete{
+        min-width: 150px;
         }
     .Return{
         right: 0px;
