--- a/templates/pages/home/register.html.twig
+++ b/templates/pages/home/register.html.twig
@@ -17,7 +17,6 @@
 						<fieldset>
 							<legend>Communication</legend>
 
-							{{ form.createInputText('tel','text','Numéro de téléphone', 'space',POST.tel)}}
 							{{ form.createInputText('email','text','Adresse email', 'space',POST.email)}}
 							{% if( POST.email != NULL) %}
 								<p>Cette adresse est déja utilisée</p>
@@ -30,6 +29,7 @@
 							{% if(samePass == false) %}
 								<p>{{ message }}</p>
 							{% endif %}
+							{{ form.createInputText('tel','text','Numéro de téléphone', 'space',POST.tel)}}
 
 						</fieldset>
 						<fieldset>
@@ -49,7 +49,9 @@
 							{{ form.createInputText('streetNumber','text','Numéro de voie', 'space' , POST.streetNumber)}}
 							{{ form.createInputText('laneType','text','Type de voie', 'space' , POST.laneType) }}
 							{{ form.createInputText('street','text','Nom de rue', 'space', POST.street) }}
-							<ul class="contAutoComplete spaceAutoComplete"></ul>
+							<div>
+							<ul class="contAutoComplete"></ul>
+							</div>
 							{{ form.createInputText('addressComplement','text','Complément d adresse', 'space', POST.addressComplement)}}
 							{{ form.createInputText('postalCode','text', 'Code Postal', 'space', POST.postalCode) }}
 							{{ form.createInputText('city','text','Ville', 'space', POST.city)}}
