--- a/templates/pages/security/forgot-password.html.twig
+++ b/templates/pages/security/forgot-password.html.twig
@@ -1,43 +1,43 @@
-{% extends "partials/base.html.twig" %} 
+{% extends "partials/base.html.twig" %}
 
 {% block body%}
-<div class="container container-login">
-    <div class='container-button-back'>
-        <a href="/"><button type="button" class="btn btn-primary btn-back">Retour</button></a>
-    </div>
-    {% if success is not empty %}
-            <span class="alert alert-success" role="alert">{{success|raw}}</span>
-    {% endif %}  
-    <div class="login-form-container">
-        <div class="login-form-top">
-            <h2>Réinitialisation du mot de passe</h2>
-        </div>
-        <form class='reset-container-form' method='post' action='/?area=security&controller=security&action=forgotPassword'>
-            <div class="form-group">
-                <label for="email">Adresse email</label>
-                <input type="email" name="email" class="form-control" id="email_input" placeholder="name@example.com">
-                <div class='check-form'>
-                    <img src="images/check.svg" alt="icone de validation" class="icone-verif login-js">
-                    <span class="message-alerte login-js">Rentrez un email valide.</span>
-                </div>
-                {% if message is not empty %}
-                    <span class="message-alerte">{{message1|raw}}</span>
-                {% endif %} 
-                {% if messageErrorEmail is not empty %}
-        <span class="message-alerte">{{messageErrorEmail1|raw}}</span>
-        {% endif %} 
-            </div>
-            <div class="container-button-center">
-                <input type="submit" class="btn btn-primary" value="Valider" name="submit" />
-            </div>
-        </form>    
-        <div class="password-forgotten-text">
-            <h3>Vous avez changé d'adresse email ?</h3>
-            <p>Si vous n’utilisez plus l’adresse email associée à votre compte MNS, merci de prendre contact avec l’équipe de MNS soit par email à l’adresse contact@metznumericschool.fr ou par téléphone au 03 87 16 07 17</p>
-        </div>
-    </div>
+	<div class="container container-login">
+		<div class='container-button-back'>
+			<a href="/">
+				<button type="button" class="btn btn-primary btn-back">Retour</button>
+			</a>
+		</div>
+		{% if success is not empty %}
+			<span class="alert alert-success" role="alert">{{success|raw}}</span>
+		{% endif %}
+		<div class="login-form-container">
+			<div class="login-form-top">
+				<h2>Réinitialisation du mot de passe</h2>
+			</div>
+			<form class='reset-container-form' method='post' action='/?area=security&controller=security&action=forgotPassword'>
+				<div class="form-group">
+					<label for="email">Adresse email</label>
+					<input type="email" name="email" class="form-control" id="email_input" placeholder="name@example.com">
+					<div class='check-form'>
+						<img src="images/check.svg" alt="icone de validation" class="icone-verif login-js">
+						<span class="message-alerte login-js">Rentrez un email valide.</span>
+					</div>
+					{% if message is not empty %}
+						<span class="message-alerte">{{message|raw}}</span>
+					{% endif %}
+					{% if messageErrorEmail is not empty %}
+						<span class="message-alerte">{{messageErrorEmail|raw}}</span>
+					{% endif %}
+				</div>
+				<div class="container-button-center">
+					<input type="submit" class="btn btn-primary" value="Valider" name="submit"/>
+				</div>
+			</form>
+			<div class="password-forgotten-text">
+				<h3>Vous avez changé d'adresse email ?</h3>
+				<p>Si vous n’utilisez plus l’adresse email associée à votre compte MNS, merci de prendre contact avec l’équipe de MNS soit par email à l’adresse contact@metznumericschool.fr ou par téléphone au 03 87 16 07 17</p>
+			</div>
+		</div>
+	</div>
 </div>
-</div>
-<script src="scripts/login-check.js"></script>
-
-{% endblock %}
+<script src="scripts/login-check.js"></script>{% endblock %}
