--- a/public/style/style.css
+++ b/public/style/style.css
@@ -63,7 +63,8 @@ h3,h4 {
     background-color :var(--main-title-color);
     border : 2px solid var(--main-title-color);
     color:#fff;
-    width: 200px;
+    width: auto;
+    padding: 7.5px 15px;
     border-radius: 100px;
     font-family: "Shary";
 }
@@ -89,7 +90,8 @@ h3,h4 {
     background-color :transparent;
     border : 2px solid var(--main-title-color);
     color:#fff;
-    width: 200px;
+    width: auto;
+    padding: 7.5px 15px;
     border-radius: 100px;
     font-family: "Shary";
 }
