--- a/templates/pages/admin/gestion/classroom/classroom.gestion.html.twig
+++ b/templates/pages/admin/gestion/classroom/classroom.gestion.html.twig
@@ -37,7 +37,7 @@
                             <a href="/?area=admin&controller=classroom&action=view&id={{ classroom.id_classroom }}"><img src="images/eye.png" /></a>
                             <form method="POST" action="/?area=admin&controller=classroom&action=disabled">
                             <input type="hidden" name="id_classroom" value="{{ classroom.id_classroom }}" />
-                            <label for="btn_delete" class="cursor "><img src="images/cancel.png" /></label>
+                            <label for="btn_delete" class="cursor "><img class="img-small" src="images/cancel.png" /></label>
                             <button id="btn_delete" name="btn_delete" class="displayNone"></button>
                             </form>
                         </div>
