--- a/templates/pages/admin/gestion/training/addTraining.gestion.html.twig
+++ b/templates/pages/admin/gestion/training/addTraining.gestion.html.twig
@@ -20,7 +20,7 @@
                 </select>
             </div>
             <div class='contBtnMenu'>
-                <button type="button" class=" btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion">Retour</a></button>
+                <a href="/?area=admin&controller=gestion"><button type="button" class=" btn btn-primary btn-lg">Retour</button></a>
                 <button type="submit" class=" btn btn-primary btn-lg" name="submit">Enregistrer</button>
             </div>
         </div>
