recup travail romain

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -338,6 +338,7 @@ form.reset-container-form {
     font-family: 'Gilroy';
     letter-spacing: 0.1rem;
     font-size: 1.2em;
+    text-align: center;
 }
 
 .form-group {
@@ -416,12 +417,6 @@ form.container-reset-password{
     justify-content: space-between;
     height: 50%;
     width: 98%;
-}
-.form-group {
-    margin : 10px auto;
-    width: 90%;
-    font-family: 'Gilroy';
-    position:relative
 }
 
 .password-forgotten-text {
@@ -553,7 +548,33 @@ form.container-reset-password{
     }
 
     .register-part{
+        margin-top:10px;
         padding : 0 5px
+    }
+
+    .password_forgotten{
+        font-size: 0.7rem;
+    }
+    
+    .register-part > p 
+    {
+        font-size: 0.9rem;
+    }
+
+    .form-group{
+        margin:5px auto
+    }
+    .login-form-top
+    {
+        padding: 10px 5px;
+    }
+
+    .login-form-container{
+        margin-top: 5px;
+        min-height: 380px;
+    }
+    .container-button-center{
+        margin-top: 10px;
     }
 
 }
