--- a/templates/pages/trainee/account.html.twig
+++ b/templates/pages/trainee/account.html.twig
@@ -1,88 +1,87 @@
 {% extends "partials/base-trainee.html.twig" %}
 
 {% block body %}
-	<div class="container-account">
-		<div class="container-personal-info one">
-			<h2>Vos informations personnelles</h2>
-			<form method='post' action='#'>
-				{% if message_update_info %}
-					<div class="alert-info alert">{{message_update_info|raw}}</div>
-				{% endif %}
-				<div class="part-column">
-					<div class="form-first-column">
-						<div class="form-sub-part part-firstName">
-							<label for="firstName">Prénom</label>
-							<input type="text" name="firstName" class="form-control" id="firstName_input" value="{{trainee.getFirstName}}"/>
-						</div>
-						<div class="form-sub-part part-email">
-							<label for="email">Email</label>
-							<input type="text" name="email" class="form-control" id="email_input" value="{{trainee.getEmail}}">
-						</div>
-						<div class="part-address">
-							<div class="form-sub-part part-number">
-								<label for="streetNumber">Numéro</label>
-								<input type="text" name="streetNumber" class="form-control" id="streetNumber_input" value="{{trainee.getStreetNumber}}">
-							</div>
-							<div class="form-sub-part part-typeLane">
-								<label for="laneType">Type</label>
-								<input type="text" name="laneType" class="form-control" id="laneType_input" value="{{trainee.getLaneType}}">
-							</div>
-						</div>
-						<div class="form-sub-part part-postalCode">
-							<label for="postalCode">Code postal</label>
-							<input type="text" name="postalCode" class="form-control" id="postalCode_input" value="{{trainee.getpostalCode}}"/>
-						</div>
+	<div
+		class="container-account container">
+		{# <div class="container-personal-info row one"> #}
+		<h2 class="row text-center">Vos informations personnelles</h2>
+		<form class="row justify-content-around" method='post' action='#'>
+			{% if message_update_info %}
+				<div class=" alert-info alert">{{message_update_info|raw}}</div>
+			{% endif %}
+			<div class="d-flex flex-column gap-3 col-6 ">
+				<div class="form-sub-part part-firstName">
+					<label for="firstName">Prénom</label>
+					<input type="text" name="firstName" class="form-control" id="firstName_input" value="{{trainee.getFirstName}}"/>
+				</div>
+				<div class="form-sub-part part-email ">
+					<label for="email">Email</label>
+					<input type="text" name="email" class="form-control" id="email_input" value="{{trainee.getEmail}}">
+				</div>
+				<div class="part-address">
+					<div class="form-sub-part part-number">
+						<label for="streetNumber">Numéro</label>
+						<input type="text" name="streetNumber" class="form-control" id="streetNumber_input" value="{{trainee.getStreetNumber}}">
 					</div>
-					<div class="form-second-column">
-						<div class="form-sub-part lastName">
-							<label for="lastName">Nom</label>
-							<input type="text" name="lastName" class="form-control" id="lastName_input" value="{{trainee.getFamilyName}}">
-						</div>
-						<div class="form-sub-part tel">
-							<label for="tel">Téléphone</label>
-							<input disabled type="text" name="tel" class="form-control" id="tel_input" value="{{trainee.gettel}}">
-						</div>
-						<div class="form-sub-part street">
-							<label for="street">Rue</label>
-							<input type="text" name="street" class="form-control" id="street_input" value="{{trainee.getstreet}}">
-						</div>
-						<div class="form-sub-part part-street">
-
-							<label for="city">Ville</label>
-							<input type="text" name="city" class="form-control" id="city_input" value="{{trainee.getcity}}">
-
-						</div>
+					<div class="form-sub-part part-typeLane">
+						<label for="laneType">Type</label>
+						<input type="text" name="laneType" class="form-control" id="laneType_input" value="{{trainee.getLaneType}}">
 					</div>
 				</div>
-				<div class="part-raw">
-					<div class="container-button-center">
-						<button type="submit" id="btn-change-personal-info" class="btn btn-secondary">
-							Modifier</button>
-						<button type="submit" id="btn-validate-personal-info" name="submit" class="btn btn-secondary">
-							Valider</button>
-					</div>
+				<div class="form-sub-part part-postalCode">
+					<label for="postalCode">Code postal</label>
+					<input type="text" name="postalCode" class="form-control" id="postalCode_input" value="{{trainee.getpostalCode}}"/>
 				</div>
-			</form>
-		</div>
-		<div class="container-profile-pic two">
+			</div>
+			<div class="d-flex flex-column gap-3 gap-3 col-6 ">
+				<div class="form-sub-part lastName">
+					<label for="lastName">Nom</label>
+					<input type="text" name="lastName" class="form-control" id="lastName_input" value="{{trainee.getFamilyName}}">
+				</div>
+				<div class="form-sub-part tel">
+					<label for="tel">Téléphone</label>
+					<input disabled type="text" name="tel" class="form-control" id="tel_input" value="{{trainee.gettel}}">
+				</div>
+				<div class="form-sub-part street">
+					<label for="street">Rue</label>
+					<input type="text" name="street" class="form-control" id="street_input" value="{{trainee.getstreet}}">
+				</div>
+				<div class="form-sub-part part-street">
+
+					<label for="city">Ville</label>
+					<input type="text" name="city" class="form-control" id="city_input" value="{{trainee.getcity}}">
+
+				</div>
+			</div>
+			<div class="my-4">
+				<div class="container-button-center">
+					<button type="submit" id="btn-change-personal-info" class="btn btn-secondary">
+						Modifier</button>
+					<button type="submit" id="btn-validate-personal-info" name="submit" class="btn btn-secondary">
+						Valider</button>
+				</div>
+			</div>
+		</form>
+		{# </div> #}
+		<div class="container-profile-pic row my-4">
 			<h2>Votre photo de profil</h2>
 			{% if message is defined %}
 				<div class="alert-info alert">{{message|raw}}</div>
 			{% endif %}
-			<div class="container_profile-pic">
+			<div class="container_profile-pic justify-content-center row">
 
-				<img class="profile_pic" {% if(trainee.getProfilePic is not null) %} src="/?area=file&controller=file&action=get_picture&file={{trainee.getProfilePic}}" {% else %} src="/images/avatar.jpg" {% endif %} alt='profile-picture'/>
+				<img class="col-4 profile_pic" {% if(trainee.getProfilePic is not null) %} src="/?area=file&controller=file&action=get_picture&file={{trainee.getProfilePic}}" {% else %} src="/images/avatar.jpg" {% endif %} alt='profile-picture'/>
 
 			</div>
-			<div class="form-update-delete-pic">
-				<form class="form-change-pic" action='#' method='post' enctype='multipart/form-data'>
+			<div class="form-update-delete-pic col-4">
+				<form class="form-change-pic col-2" action='#' method='post' enctype='multipart/form-data'>
 					<label class="btn btn-icone" for='edit-profile_pic'>
 						<i class="fa-solid fa-pen "></i>
 					</label>
 					<input id='edit-profile_pic' type='file' name="profile_pic"/>
-					<button type="submit" name="change-pic-form-button" class="btn-hidden">Supprimer</button>
+					<button type="submit" name="change-pic-form-button" class="btn-hidden"></button>
 				</form>
-				<form action='#' method='post' enctype='multipart/form-data'>
+				<form class="col-2" action='#' method='post' enctype='multipart/form-data'>
 					<input type='hidden' name="profile_pic"/>
 					<button onclick="confirm('Etes vous sûr de vouloir supprimer votre photo?')" type="submit" name="delete-pic-form-button" class="btn btn-icone">
 						<i class="fa-solid fa-trash"></i>
@@ -90,9 +89,9 @@
 				</form>
 			</div>
 		</div>
-		<div class='container-change-password three'>
-			<h2>Changer de mot de passe</h2>
-			<form class='form-change-password' action='/?area=trainee&controller=account&action=change_password' method='post'>
+		<div class='row container-change-password three'>
+			<h2 class="col-12">Changer de mot de passe</h2>
+			<form class='col-12 align-items-center d-flex flex-column form-change-password' action='/?area=trainee&controller=account&action=change_password' method='post'>
 				<div class="form-floating">
 					<input type="password" name="old_password" class="form-control" id="floatingInput" placeholder="name@example.com">
 					<label for="floatingInput">Ancien mot de passe</label>
@@ -144,7 +143,6 @@
 				<div class="alert alert-success alert-form">{{success_message|raw}}</div>
 			{% endif %}
 		</div>
-
 	</div>
 	<script src="/scripts/account-trainee.js"></script>
 {% endblock %}
