style account candidat

--- a/public/style/candidate.css
+++ b/public/style/candidate.css
@@ -11,18 +11,6 @@ header {
 }
 
 
-.container-dashboard {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 80px;
-
-}
-
-.dataTable{
-    display: flex;
-    justify-content: center;
-    width: 450px;
-}
 
 .path {
     font-size: 0.8rem;
@@ -40,11 +28,11 @@ header {
 .container-titre-dashboard>p {
     margin: 20px auto
 }
-
+/* 
 .form-docs {
     align-items: center;
     gap: 30px
-}
+} */
 .cell{
     border : 1px solid var(--main-title-color);
     
@@ -136,27 +124,12 @@ i:hover {
 /* ACCOUNT */
 
 
-div.container-account > div {
-    min-height: 300px;
-    min-width: 450px;
-    padding: 10px 15px;
-
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+.personal-data p{
+    margin : 1.5rem auto
 }
-
-
 
 .alert>p{
     margin-bottom: 0;
-}
-.container-profile-pic {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
 }
 
 .container-profile-pic form {
@@ -190,23 +163,20 @@ div.container-account > div {
     width: 300px;
 }
 
-.form-update-delete-pic
-{
-    display: flex;
-    justify-content: center;
-    gap:20px;
-    margin: 20px auto;
-}
-
 .profile_pic {
     width: 100%;
     height: auto;
 }
 
-.container-account {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: baseline;
+.form-floating > label
+{
+    left:inherit
+}
+
+.form-floating
+{
+    min-width: inherit;
+    font-size: 0.8rem;
 }
 
 .container-personal-info{
@@ -219,13 +189,13 @@ div.container-account > div {
 
 /* Formulaire changement de mdp :  */
 
-
+/* 
 
 div.container-account >.container-change-password {
     min-height : 300px;
     height:inherit;
     margin:-100px
-}
+} */
 
 .container-change-password>.alert{
 
@@ -302,11 +272,7 @@ button.btn-hidden{
 
 @media screen and (max-width: 800px){
 
-    .container-account {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 50px
-    }
+    
 
    
     .col-1 {
@@ -328,19 +294,15 @@ button.btn-hidden{
 
 @media all and (max-width: 600px){
 
-    .dataTable{
+    /* .dataTable{
         display: flex;
         width: 350px;
-    }
+    } */
     .container-titre-dashboard {
         padding: 0 10px;
         margin: 20px auto
     }
-    div.container-account > div {
-        min-width: inherit;
-        width: auto;
-        /* height: 250px; */
-    }
+    
     .form-floating{
         width: auto;
     }
