--- a/templates/pages/trainee/declare_absence.html.twig
+++ b/templates/pages/trainee/declare_absence.html.twig
@@ -39,7 +39,7 @@
 						</select>
 					</div>
 
-					<div class="form-check">
+					<div class="form-check d-flex justify-content-center gap-2">
 						<input type="checkbox" name="checkbox_justificatif" class="form-check-input" id="checkbox_justificatif">
 						<label class="form-check-label" for="checkbox_justificatif">Transmettre un justificatif
 						</label>
