--- a/public/style/style.css
+++ b/public/style/style.css
@@ -279,6 +279,10 @@ nav img
     gap:4rem
 }
 
+.container-login .icone-verif{
+    top : 35px
+}
+
 .container-button-back {
     align-self:flex-start;
     margin-top: 20px;
