--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -7,14 +7,14 @@
 			{{candidate.getFirstName}}, bienvenue sur votre espace personnel !
 		</h2>
 		<p>Vous êtes candidat à la formation '{{training.getTitleFormation}}'</p>
-		<p>Pour compléter votre dossier et permettre à l’équipe de MNS d’étudier votre candidature, merci de nous transmettre les documents ci-dessous avant le $dateFinCand</p>
+		<p>Pour compléter votre dossier et permettre à l’équipe de MNS d’étudier votre candidature, merci de nous transmettre les documents ci-dessous avant le XXX</p>
 	</div>
 	{% if message is not empty %}
 		<div class="alert alert-warning alert-form-docs" role="alert">{{message|raw}}</div>
 	{% endif %}
-	<div class="container-dashboard">
-		<form class="form-docs" action="#" method='post' enctype='multipart/form-data'>
-			<table class="dataTable">
+	<div class="row justify-content-center">
+		<form class="col-12 col-md-8" action="#" method='post' enctype='multipart/form-data'>
+			<table class="dataTable row justify-content-center my-4">
 				<colgroup>
 					<col class='col-1' span="1">
 					<col class='col-2' span='1'>
@@ -100,7 +100,9 @@
 				{% endfor %}
 			</tbody>
 		</table>
-		<button type="submit" name="form-button" class="btn btn-primary btn-lg">Envoyer</button>
+		<div class="row justify-content-center my-4">
+			<button type="submit" name="form-button" class="btn btn-primary btn-lg">Envoyer</button>
+		</div>
 	</form>
 </div>
 
