--- a/templates/pages/trainee/account.html.twig
+++ b/templates/pages/trainee/account.html.twig
@@ -5,10 +5,12 @@
 		class="container-personal-info container">
 		{# <div class="container-personal-info row one"> #}
 		<h2 class="mt-4 row justify-content-center">Vos informations personnelles</h2>
-		<form class="row justify-content-center" id="form_full-screen" method='post' action='#'>
-			{% if message_update_info %}
+		{% if message_update_info %}
+			<div class="row justify-content-center">
 				<div class="col-6 col-md-4 alert-info alert">{{message_update_info|raw}}</div>
-			{% endif %}
+			</div>
+		{% endif %}
+		<form class="row justify-content-center" id="form_full-screen" method='post' action='#'>
 			<div class="my-3 col-12 col-md-6">
 				<div class="form-sub-part part-firstName">
 					<label for="firstName">Prénom</label>
@@ -19,19 +21,16 @@
 					<input type="text" name="email" class="form-control" id="email_input" value="{{trainee.getEmail}}">
 				</div>
 				<div class="part-address">
-					<div class="form-sub-part part-number">
+					<div class="form-sub-part part-number col-2">
 						<label for="streetNumber">Numéro</label>
 						<input type="text" name="streetNumber" class="form-control" id="streetNumber_input" value="{{trainee.getStreetNumber}}">
 					</div>
-					<div class="form-sub-part part-typeLane">
-						<label for="laneType">Type</label>
-						<input type="text" name="laneType" class="form-control" id="laneType_input" value="{{trainee.getLaneType}}">
+					<div class="form-sub-part part-street col-9">
+						<label for="street">Rue</label>
+						<input type="text" name="street" class="form-control" id="street_input" value="{{trainee.getStreet}}">
 					</div>
 				</div>
-				<div class="form-sub-part part-postalCode">
-					<label for="postalCode">Code postal</label>
-					<input type="text" name="postalCode" class="form-control" id="postalCode_input" value="{{trainee.getpostalCode}}"/>
-				</div>
+
 			</div>
 			<div class="my-3 col-12 col-md-6">
 				<div class="form-sub-part lastName">
@@ -42,14 +41,17 @@
 					<label for="tel">Téléphone</label>
 					<input disabled type="text" name="tel" class="form-control" id="tel_input" value="{{trainee.gettel}}">
 				</div>
-				<div class="form-sub-part street">
-					<label for="street">Rue</label>
-					<input type="text" name="street" class="form-control" id="street_input" value="{{trainee.getstreet}}">
+				<div class="part-address">
+					<div class="form-sub-part part-postalCode col-3">
+						<label for="postalCode">Code postal</label>
+						<input type="text" name="postalCode" class="form-control" id="postalCode_input" value="{{trainee.getpostalCode}}"/>
+					</div>
+					<div class="form-sub-part part-street col-8">
+						<label for="city">Ville</label>
+						<input type="text" name="city" class="form-control" id="city_input" value="{{trainee.getcity}}">
+					</div>
 				</div>
-				<div class="form-sub-part part-street">
-					<label for="city">Ville</label>
-					<input type="text" name="city" class="form-control" id="city_input" value="{{trainee.getcity}}">
-				</div>
+
 			</div>
 			<div class="my-4">
 				<div class="container-button-center">
@@ -60,65 +62,65 @@
 				</div>
 			</div>
 		</form>
-		<form class="row justify-content-center" id="form_mobile" method='post' action='#'>
+		<div id="form_mobile">
 			{% if message_update_info %}
-				<div class="col-6 col-md-4 alert-info alert">{{message_update_info|raw}}</div>
+				<div class="row justify-content-center text-center">
+					<div class="col-6 col-md-4 alert-info alert">{{message_update_info|raw}}</div>
+				</div>
 			{% endif %}
-			<div class="col-12 col-md-6">
-				<div class="form-sub-part lastName">
-					<label for="lastName">Nom</label>
-					<input type="text" name="lastName" class="form-control" id="lastName_input" value="{{trainee.getFamilyName}}">
-				</div>
-				<div class="form-sub-part part-firstName">
-					<label for="firstName">Prénom</label>
-					<input type="text" name="firstName" class="form-control" id="firstName_input" value="{{trainee.getFirstName}}"/>
-				</div>
-				<div class="form-sub-part part-email ">
-					<label for="email">Email</label>
-					<input type="text" name="email" class="form-control" id="email_input" value="{{trainee.getEmail}}">
-				</div>
-				<div class="form-sub-part tel">
-					<label for="tel">Téléphone</label>
-					<input disabled type="text" name="tel" class="form-control" id="tel_input" value="{{trainee.gettel}}">
-				</div>
-				<div class="row justify-content-between">
-					<div class="col-4 form-sub-part part-number">
-						<label for="streetNumber">Numéro</label>
-						<input type="text" name="streetNumber" class="form-control" id="streetNumber_input" value="{{trainee.getStreetNumber}}">
-					</div>
-					<div class="col-8 form-sub-part part-typeLane">
-						<label for="laneType">Type</label>
-						<input type="text" name="laneType" class="form-control" id="laneType_input" value="{{trainee.getLaneType}}">
-					</div>
-				</div>
-				<div class="form-sub-part street">
-					<label for="street">Rue</label>
-					<input type="text" name="street" class="form-control" id="street_input" value="{{trainee.getstreet}}">
-				</div>
-				<div class="form-sub-part part-postalCode">
-					<label for="postalCode">Code postal</label>
-					<input type="text" name="postalCode" class="form-control" id="postalCode_input" value="{{trainee.getpostalCode}}"/>
-				</div>
-				<div class="form-sub-part part-street">
+			<form class="row justify-content-center" method='post' action='#'>
 
-					<label for="city">Ville</label>
-					<input type="text" name="city" class="form-control" id="city_input" value="{{trainee.getcity}}">
-
+				<div class="col-12 col-md-6">
+					<div class="form-sub-part lastName">
+						<label for="lastName">Nom</label>
+						<input type="text" name="lastName" class="form-control" id="lastName_input" value="{{trainee.getFamilyName}}">
+					</div>
+					<div class="form-sub-part part-firstName">
+						<label for="firstName">Prénom</label>
+						<input type="text" name="firstName" class="form-control" id="firstName_input" value="{{trainee.getFirstName}}"/>
+					</div>
+					<div class="form-sub-part part-email ">
+						<label for="email">Email</label>
+						<input type="text" name="email" class="form-control" id="email_input" value="{{trainee.getEmail}}">
+					</div>
+					<div class="form-sub-part tel">
+						<label for="tel">Téléphone</label>
+						<input disabled type="text" name="tel" class="form-control" id="tel_input" value="{{trainee.gettel}}">
+					</div>
+					<div class="row justify-content-between">
+						<div class="col-3 form-sub-part part-number">
+							<label for="streetNumber">Numéro</label>
+							<input type="text" name="streetNumber" class="form-control" id="streetNumber_input" value="{{trainee.getStreetNumber}}">
+						</div>
+						<div class="col-9 form-sub-part part-street">
+							<label for="street">Rue</label>
+							<input type="text" name="street" class="form-control" id="street_input" value="{{trainee.getStreet}}">
+						</div>
+					</div>
+					<div class="row justify-content-between">
+						<div class="col-4 form-sub-part part-postalCode">
+							<label for="postalCode">Code postal</label>
+							<input type="text" name="postalCode" class="form-control" id="postalCode_input" value="{{trainee.getpostalCode}}"/>
+						</div>
+						<div class="col-8 form-sub-part part-street">
+							<label for="city">Ville</label>
+							<input type="text" name="city" class="form-control" id="city_input" value="{{trainee.getcity}}">
+						</div>
+					</div>
+				</div>
+				<div class="container-button-center mt-4">
+					<button type="submit" id="btn-change-personal-info_mobile" class="btn btn-secondary">
+						Modifier</button>
+					<button type="submit" id="btn-validate-personal-info_mobile" name="submit" class="btn btn-secondary">
+						Valider</button>
 				</div>
 			</div>
-			<div class="container-button-center mt-4">
-				<button type="submit" id="btn-change-personal-info_mobile" class="btn btn-secondary">
-					Modifier</button>
-				<button type="submit" id="btn-validate-personal-info_mobile" name="submit" class="btn btn-secondary">
-					Valider</button>
-			</div>
-		</div>
-	</form>
-	{# </div> #}
+		</form>
+	</div>
 	<div class="container-profile-pic row my-4">
 		<h2>Votre photo de profil</h2>
 		{% if message is defined %}
-			<div class="col-6 col-md-4 alert-info alert">{{message|raw}}</div>
+			<div class="col-6 col-md-4 alert-info alert text-center">{{message|raw}}</div>
 		{% endif %}
 		<div class="container_profile-pic justify-content-center row">
 
