--- a/templates/partials/base-trainee.html.twig
+++ b/templates/partials/base-trainee.html.twig
@@ -23,9 +23,7 @@
 						<li class="navbar__item">
 							<a href="/?area=trainee&controller=absence" class="navbar__links">Mes absences</a>
 						</li>
-						<li class="navbar__item">
-							<a href="/?area=trainee&controller=delay" class="navbar__links">Mes retards</a>
-						</li>
+						<li class="navbar__item">Mes retards</li>
 					</ul>
 				</div>
 				<div class="navbar-account_notification">
